4-pack visible on mobile, added basic search (unstyled) to mobile nav, fixed stacking of mobile influence logo, now points to site home

--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ div.home-box img {
 }
 
 .top-block {
-  height: 350px;
+  min-height: 350px;
   width: 100%;
   /* height:600px; */
 }
@@ -6933,4 +6933,42 @@ text-align:center;
 
 .single-inf_theme .shop-main-social a {
   margin:0 15px;
+}
+
+
+/***************
+******* DWM Mobile Styles
+***************/
+
+.mobile-logo{
+  position:absolute;
+  top:10px;left:60px;
+  z-index:1000;
+}
+
+.mobile-search{
+  position:absolute;
+  top:270px;
+  z-index: 1000;
+}
+.mobile-search form label{
+  display:none;
+}
+
+/*  Overrides for "4-pack" callout */
+
+@media screen AND (max-width:700px){
+  .callout_container{
+    text-align: center;
+  }
+  .callout{
+    /*display: block;*/
+    text-align: center;
+  }
+  .callout img{
+    width:250px;
+    height:250px;
+    max-height:none;
+    margin:0.5em auto;
+  }
 }
